syntax = "proto3";

package auth;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string expires_at = 2;
}
