syntax = "proto3";

package library;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 copy_count = 5;
}

message BookCopy {
  string id = 1;
  string book_id = 2;
  string copy_number = 3;
  string status = 4;
}

message Member {
  string id = 1;
  string name = 2;
  string email = 3;
}

message Borrow {
  string id = 1;
  string copy_id = 2;
  string member_id = 3;
  string borrowed_at = 4;
  string returned_at = 5;
  string status = 6;
  BookCopy copy = 7;
  Book book = 8;
  Member member = 9;
}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

message PaginationResponse {
  int32 page = 1;
  int32 limit = 2;
  int32 total_count = 3;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
}

message CreateBookResponse {
  Book book = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
}

message UpdateBookResponse {
  Book book = 1;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message ListBooksRequest {
  PaginationRequest pagination = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  string query = 5;
}

message ListBooksResponse {
  repeated Book books = 1;
  PaginationResponse pagination = 2;
}

message CreateMemberRequest {
  string name = 1;
  string email = 2;
}

message CreateMemberResponse {
  Member member = 1;
}

message UpdateMemberRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UpdateMemberResponse {
  Member member = 1;
}

message GetMemberRequest {
  string id = 1;
}

message GetMemberResponse {
  Member member = 1;
}

message ListMembersRequest {
  PaginationRequest pagination = 1;
  string name = 2;
  string email = 3;
  string query = 4;
}

message ListMembersResponse {
  repeated Member members = 1;
  PaginationResponse pagination = 2;
}

message BorrowBookRequest {
  string copy_id = 1;
  string member_id = 2;
}

message BorrowBookResponse {
  Borrow borrow = 1;
}

message ReturnBookRequest {
  string copy_id = 1;
}

message ReturnBookResponse {
  Borrow borrow = 1;
}

message ListBorrowingsRequest {
  string member_id = 1;
  PaginationRequest pagination = 2;
  string query = 3;
}

message ListBorrowingsResponse {
  repeated Borrow borrows = 1;
  PaginationResponse pagination = 2;
}

message AvailableCopy {
  string id = 1;
  string book_id = 2;
  string book_title = 3;
  string copy_number = 4;
}

message ListAvailableCopiesRequest {
  PaginationRequest pagination = 1;
}

message ListAvailableCopiesResponse {
  repeated AvailableCopy copies = 1;
  PaginationResponse pagination = 2;
}

message CreateBookCopyRequest {
  string book_id = 1;
  string copy_number = 2;
}

message CreateBookCopyResponse {
  BookCopy copy = 1;
}

message ListCopiesByBookRequest {
  string book_id = 1;
  PaginationRequest pagination = 2;
}

message ListCopiesByBookResponse {
  repeated BookCopy copies = 1;
  PaginationResponse pagination = 2;
}
